styles/main.css
body {
    font-family: 'Inter', sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}



.card__container {
    justify-self: center;
    margin-top: 5em;
    position: relative;
    display: grid;
    max-width: 1440px;
    grid-template-columns: repeat(3, 1fr);

    grid-template-rows:
        300px
        /* 1. Obrázek */
        auto
        /* 2. Titulek */
        auto
        /* 3. Spec 1 */
        auto
        /* 4. Spec 2 */
        auto
        /* 5. Spec 3 */
        auto
        /* 6. Spec 4 */
        auto
        /* 7. Spec 5 */
        auto
        /* 8. Extra (zelený box) */
        10px
        /* 8.5 Sleva*/
        auto
        /* 9. Cena a sklad */
        auto;
    /* 10. Footer (tlačítka) */
    gap: 2px;
    column-gap: 2rem;
}


.card {
    display: grid;
    grid-row: span 11;
    grid-template-rows: subgrid;
    background: white;
    transform: translate(0, 0);
    border: 1px solid lightgray;
}


.card__header {
    grid-row: 1 / span 2;

    display: grid;
    grid-template-rows: subgrid;
}

.card__body {
    grid-row: 3 / span 8;
    padding: 1em;
    display: grid;
    grid-template-rows: subgrid;
}

.card__footer {
    grid-row: 11;

    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #ebebeb;
    padding: 1em;
    margin: 1em;
    margin-top: 0;
}

.card__specs {
    display: grid;
    grid-template-rows: subgrid;

    grid-row: 1/span 5;

    gap: 8px;
}

.spec-row {

    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0;
    border-bottom: 1px solid #eee;

}

.card__image {
    max-width: 100%;
    max-height: 100%;
    width: auto;
    height: auto;
    object-fit: contain;
    width: 100%;
    aspect-ratio: 1 / 1;
    display: flex;
    align-items: center;
    justify-content: center;

}

.card__header h2 {
    grid-row: 2;
    margin: 0;
    padding: 0 1rem;
    font-weight: 700;
    font-size: 1.1rem;
    line-height: 1.3;
    text-align: left;
    width: 100%;
    box-sizing: border-box;
}


.image-wrapper {
    grid-row: 1;

    padding: 2rem;
}



.card__tags {
    position: absolute;
    top: 0px;

    left: 0px;

    z-index: 10;
    display: flex;
    flex-direction: column;
    gap: 4px;
}

.tag {
    padding: 8px;
    font-size: 11px;
    font-weight: bold;
    color: white;
    border-radius: 0px;
    border-bottom-right-radius: 6px;
    border-top-right-radius: 6px;
    text-transform: uppercase;
}


.tag--pink {
    background-color: purple;
}

.tag--red {
    background-color: #ffff;
    color: purple;
    border: 1px solid purple;
}

.card__extra {
    grid-row: 6/span 1;
    justify-self: center;
    border: solid #00c853 2px;
    border-radius: 5px;
    color: #00c853;
    display: flex;
    justify-content: center;
    align-items: center;
}

.gifticon {
    color: #00c853;
}

.card__extra>p {
    margin: .5em;
}

.card__sale {
    text-align: end;
    grid-row: 7;
}

.card__info {
    grid-row: 8/span 1;
    display: flex;
    justify-content: space-between;
    margin-top: .5em;

}

.card__info--item {
    display: flex;
    flex-direction: column;
    gap: 2px;
    justify-content: flex-end;
}

.card__button {
    background-color: #00c853;
    text-decoration: none;
    font-weight: 600;
    padding: 10px 20px;
    border: none;
    border-radius: 6px;
    color: white;
    display: inline-flex;
    cursor: pointer;
    align-items: center;
    gap: 8px;
    text-decoration: none;

    padding: 8px 16px;
    border-radius: 4px;
}

.sale {
    margin: 0;
}

.percent {
    color: purple;
}

.striked {
    color: lightgrey;
    text-decoration: line-through;
}

.stock {
    color: #00c853;
}

.price {
    color: purple;
    font-size: 22px;
    text-align: end;
}

.price-nodph {
    color: lightgrey;

}

.icon-holder {
    display: flex;
    align-items: center;
    gap: 10px;
}

.price-nodph,
.striked,
.label {
    color: #757575;
    /* Solidní standard */
}

